# k2

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  build.k2  main.k2  rust-toolchain.toml
.github/workflows/: ci.yml
conformance/: README.md
conformance/01-lexical/: builtins.expected  builtins.k2  char_literals.expected  char_literals.k2  comments.expected  comments.k2  escaped_identifiers.k2  float_literals.expected  float_literals.k2  identifiers.expected  identifiers.k2  int_literals.expected  int_literals.k2  keywords.expected  keywords.k2  multiline_strings.expected  multiline_strings.k2  operators.expected  operators.k2  string_literals.expected  string_literals.k2
conformance/02-types/: arrays_slices.expected  arrays_slices.k2  enum_explicit_values.expected  enum_explicit_values.k2  enum_switch.expected  enum_switch.k2  error_unions.expected  error_unions.k2  expr_tree_eval.expected  expr_tree_eval.k2  int_widths.expected  int_widths.k2  nested_types.expected  nested_types.k2  optionals.expected  optionals.k2  pointers.expected  pointers.k2  recursive_types.expected  recursive_types.k2  string_concat.expected  string_concat.k2  struct_basic.expected  struct_basic.k2  struct_by_value_abi.expected  struct_by_value_abi.k2  struct_field_defaults.expected  struct_field_defaults.k2  union_in_optional.expected  union_in_optional.k2  union_nested.expected  union_nested.k2  union_payload_struct.expected  union_payload_struct.k2  union_tagged.expected  union_tagged.k2
crates/k2-codegen/: Cargo.toml
crates/k2-codegen/src/: dwarf.rs  elf.rs  encode.rs  fmt_native.rs  frame.rs  layout.rs  lib.rs  link.rs  lower.rs  mir_ids.rs  obj.rs  reg.rs  regalloc.rs  runtime.rs  target.rs  tests.rs
crates/k2-codegen/src/aarch64/: encode.rs  link.rs  lower.rs  mod.rs  tests.rs
crates/k2-codegen/tests/: dwarf_native.rs  ffi.rs  os_native.rs
crates/k2-fmt/: Cargo.toml
crates/k2-fmt/src/: comments.rs  lib.rs  printer.rs  tests.rs
crates/k2-fmt/tests/: golden.rs  property.rs
crates/k2-fmt/tests/golden/: allocators.k2.fmt  build.k2.fmt  comptime_reflection.k2.fmt  generic_list.k2.fmt  hello.k2.fmt
crates/k2-lexer/: Cargo.toml
crates/k2-lexer/examples/: refdump.rs
crates/k2-lexer/src/: lib.rs
crates/k2-lsp/: Cargo.toml
crates/k2-lsp/src/: analysis.rs  document.rs  json.rs  lib.rs  position.rs  protocol.rs  rpc.rs  server.rs  tests.rs  workspace.rs
crates/k2-lsp/src/document/: tests.rs
crates/k2-lsp/src/features/: code_action.rs  completion.rs  definition.rs  diagnostics.rs  formatting.rs  hover.rs  inlay_hint.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  signature_help.rs
crates/k2-lsp/src/json/: tests.rs
crates/k2-lsp/src/position/: tests.rs
crates/k2-mir/: Cargo.toml
crates/k2-mir/src/: checks.rs  ir.rs  leak.rs  lib.rs  pretty.rs  tests.rs
crates/k2-mir/src/lower/: lower_expr.rs  lower_flow.rs  mod.rs
crates/k2-mir/tests/: corpus.rs
crates/k2-opt/: Cargo.toml
crates/k2-opt/src/: consts.rs  facts.rs  lib.rs  tests.rs
crates/k2-opt/src/pass/: check_elim.rs  const_fold.rs  copy_prop.rs  dce.rs  inline.rs  mod.rs  simplify_cfg.rs
crates/k2-opt/tests/: bench_baseline.rs  differential.rs
crates/k2-parse/: Cargo.toml
crates/k2-parse/src/: diag.rs  expr.rs  item.rs  lib.rs  pretty.rs  stmt.rs  types.rs
crates/k2-parse/tests/: examples.rs  golden.rs  grammar.rs
crates/k2-parse/tests/golden/: allocators.sexpr  anagram.sexpr  build.sexpr  caesar_cipher.sexpr  comptime_reflection.sexpr  concurrency.sexpr  config_parser.sexpr  data_structures.sexpr  errors.sexpr  errset_merge.sexpr  for_range_capture.sexpr  generic_list.sexpr  geometry.sexpr  hello.sexpr  lottery.sexpr  number_bases.sexpr  os_capabilities.sexpr  percentiles.sexpr  prime_sieve.sexpr  projectile.sexpr  roman_numerals.sexpr  run_length.sexpr  statistics.sexpr  switch_ranges.sexpr  typed_init.sexpr  unions.sexpr  while_continue.sexpr  word_count.sexpr
crates/k2-resolve/: Cargo.toml
crates/k2-resolve/src/: def.rs  diag.rs  dump.rs  ids.rs  lib.rs  module.rs  predeclared.rs  resolver.rs  scope.rs  uses.rs
crates/k2-resolve/tests/: corpus.rs  negative.rs  scopes.rs
crates/k2-std/: Cargo.toml
crates/k2-std/src/: lib.rs
crates/k2-std/std/: build.k2  std.k2
crates/k2-syntax/: Cargo.toml
crates/k2-syntax/src/: diag.rs  lib.rs
crates/k2-types/: Cargo.toml
crates/k2-types/src/: arena.rs  builtins.rs  check.rs  coerce.rs  comptime.rs  diag.rs  dump.rs  eval.rs  exhaust.rs  expr.rs  generic.rs  lib.rs  member.rs  reflect.rs  ty.rs  value.rs
crates/k2-types/tests/: comptime.rs  corpus.rs  ffi.rs  negative.rs  positive.rs
crates/k2-vm/: Cargo.toml
crates/k2-vm/src/: build_graph.rs  compile.rs  fmt.rs  heap.rs  isa.rs  lib.rs  sched.rs  tests.rs  trace.rs  value.rs  vm.rs
crates/k2-vm/tests/: build_graph.rs  concurrency.rs  os_effects.rs  run.rs  test_runner.rs
crates/k2c/: Cargo.toml
crates/k2c/bench/: baseline.txt  bench_const_branch.k2  bench_fib_iter.k2  bench_fib_rec.k2  bench_fib_rec_native.k2  bench_loop_sum.k2  bench_slice_sum.k2  bench_struct_kernel.k2  native_baseline.md
crates/k2c/src/: build_cmd.rs  imports.rs  lock.rs  main.rs  multi.rs  pkg.rs  render.rs  semver.rs  test_cmd.rs
crates/k2c/src/doc/: doctest.rs  mod.rs  render.rs  tests.rs
crates/k2c/src/doc/doctest/: tests.rs
crates/k2c/src/doc/render/: tests.rs
crates/k2c/src/render/: tests.rs
crates/k2c/tests/: cli.rs  conformance.rs  integration_examples.rs  selfhost_lexer.rs
docs/: aarch64.md  compiler-architecture.md  dwarf.md  grammar.ebnf  lsp.md  philosophy.md  tooling.md
examples/: README.md  anagram.k2  build.k2  caesar_cipher.k2  comptime_reflection.k2  concurrency.k2  config_parser.k2  data_structures.k2  errors.k2  geometry.k2  hello.k2  lottery.k2  number_bases.k2  os_capabilities.k2  percentiles.k2  prime_sieve.k2  projectile.k2  roman_numerals.k2  run_length.k2  statistics.k2  unions.k2  word_count.k2
selfhost/: lexer.k2
(+164 files in other folders)
